# ZeptoDB

./: .dockerignore  .gitignore  404.html  AGENTS.md  BACKLOG.md  BACKLOG_ko.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  COMPLETED.md  CONTRIBUTING.md  Dockerfile.patch  LICENSE  README.md  README_ko.md  discord_setup.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.githooks/: pre-push
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md
.github/scripts/: check_docs_updated.sh  check_english_first.sh  release_version.py  rename_i18n.sh
.github/workflows/: docker-publish.yml  docs.yml  graviton-test.yml  pr-docs-check.yml  production-gate.yml  pypi-manual.yml  release.yml  test-pypi.yml  trigger-site-build.yml  version-main-release.yml
API_REFERENCE/: index.html
BACKLOG/: index.html
COMPLETED/: index.html
PARQUET_S3_ACTIVATION/: index.html
WEB_UI/: index.html
apex_db.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apex_py/: __init__.py  arrow.py  dataframe.py
api/API_REFERENCE/: index.html
api/CONFIG_REFERENCE/: index.html
api/CPP_REFERENCE/: index.html
api/FLIGHT_REFERENCE/: index.html
api/HTTP_REFERENCE/: index.html
api/PYTHON_REFERENCE/: index.html
api/SECURITY_OPERATIONS_GUIDE/: index.html
api/SQL_REFERENCE/: index.html
api/SSO_INTEGRATION_GUIDE/: index.html
bench/eks_multinode_benchmark/: index.html
brand_guidelines/: index.html
deploy/docker/: Dockerfile  (+3 more)
deployment/: index.html
docs/: API_REFERENCE.ko.md  API_REFERENCE.md  API_REFERENCE_ko.md  BACKLOG.md  COMPLETED.md  KIRO_USAGE.md  PARQUET_S3_ACTIVATION.md  WEB_UI.md  brand_guidelines.md  index.md
examples/: __init__.py  feed_handler_integration.cpp
helm/: bench-values.yaml
k8s/: eks-bench-cluster.yaml
keys/: bench.license
ko/: index.html
memory/: 2026-03-23.md
monitoring/: docker-compose.yml  grafana-dashboard.json  prometheus.yml
scripts/: backup.sh  restore.sh  tune_bare_metal.sh
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
tests/: CMakeLists.txt  serial_tests.cmake  test_python.py
tests/bench/: bench_agent_memory.cpp  bench_cluster.cpp  bench_cxl.cpp  bench_cxl_standalone.cpp  bench_hdb.cpp  bench_ingest_scale.cpp  bench_parallel.cpp  bench_pipeline.cpp  bench_planner.cpp  bench_planner_benefit.cpp  bench_python.py  bench_rebalance.cpp  bench_simd_jit.cpp  bench_sql.cpp  run_arch_bench.sh
tests/feeds/: CMakeLists.txt  benchmark_feed_handlers.cpp  test_fix_parser.cpp  test_nasdaq_itch.cpp
tests/fixtures/: agent_memory_real_embeddings.txt
tests/integration/: test_flight_server_tls.sh  test_http_hdb.sh  test_http_server_prod_cli.sh  test_http_tenant.sh  test_multiprocess.sh  test_openssl_dependency_order.sh
tests/k8s/: eks-compat-cluster.yaml  require_zepto_bench_context.sh  run_arm64_tests.py  run_eks_bench.sh  run_k8s_compat.sh  run_physical_ai_memory_replay.sh  run_physical_ai_vision_retrieval.sh  run_physical_ai_vla_calibration_failure_attribution.sh  run_physical_ai_vla_closed_loop.sh  run_physical_ai_vla_early_exit.sh  run_physical_ai_vla_risk_router.sh  run_physical_ai_vla_safety_gate.sh  run_physical_ai_vla_skip_region.sh  run_physical_ai_vla_task_mapping_correction.sh  run_physical_ai_vla_trajectory_fork.sh  run_physical_ai_vla_veto_separability.sh  test-values-arm64.yaml  test-values.yaml  test_helm_security.py  test_k8s_agent_memory.py  test_k8s_cluster.py  test_k8s_compat.py  test_k8s_ha_perf.py  test_k8s_physical_ai_memory.py  test_k8s_seoul.py
tests/migration/: test_clickhouse.cpp  test_duckdb.cpp  test_hdb_loader.cpp  test_q_to_python.cpp  test_q_to_sql.cpp  test_timescaledb.cpp
tests/python/: test_agent_memory_client.py  test_agent_memory_examples.py  test_arrow_integration.py  test_client_ddl.py  test_fast_ingest.py  test_ingest_batch.py  test_pandas_integration.py  test_physical_ai_agent_memory_replay.py  test_physical_ai_runner_safety.py  test_physical_ai_vision_retrieval.py  test_physical_ai_vla_closed_loop.py  test_physical_ai_vla_early_exit.py  test_physical_ai_vla_risk_router.py  test_physical_ai_vla_safety_gate.py  test_physical_ai_vla_skip_region.py  test_physical_ai_vla_trajectory_fork.py  test_physical_ai_vla_trajectory_window_preflight.py  test_physical_ai_vla_veto_separability.py  test_polars_integration.py  test_streaming.py  test_table_aware_ingest.py
tests/unit/: test_action_outcome_sql_adapter.cpp  test_action_outcome_supervisor_runtime.cpp  test_agent_memory.cpp  test_arena_allocator.cpp  test_auth.cpp  test_bandwidth_throttler.cpp  test_cluster.cpp  test_cold_tier.cpp  test_column_store.cpp  test_composite_index.cpp  test_coordinator.cpp  test_coordinator_routing_adapter.cpp  test_cost_model.cpp  test_cxl_backend.cpp  test_ddl_replication.cpp  test_distributed_insert.cpp  test_duckdb_engine.cpp  test_edge_fleet_feed_connector.cpp  test_edge_fleet_sql_http_adapter.cpp  test_features.cpp  test_feed_table_id.cpp  test_financial_functions.cpp  test_flat_hash_map.cpp  test_flight_server.cpp  test_hdb.cpp  test_http_arrow_ipc.cpp  test_http_msgpack_ingest.cpp  test_jit_simd.cpp  test_join_window.cpp  test_kafka.cpp  test_kinesis.cpp  test_license.cpp  test_logger.cpp  test_metrics_collector.cpp  test_mqtt.cpp  test_mv_rewrite.cpp  test_opcua.cpp  test_opcua_integration.cpp  test_parallel.cpp  test_parquet_writer.cpp  (+17 more)
tools/: apex-migrate.cpp  bench-with-license.sh  eks-bench.sh  factory-10khz-workload.py  run-aarch64-tests.sh  run-factory-10khz-competitor-bench.sh  run-factory-10khz-live-docker.sh  run-full-matrix.sh  run-ros2-smoke.sh  zepto-cli.cpp  zepto-license-gen.cpp  zepto-migrate.cpp  zepto-opcua-browse.cpp  zepto-telegraf-output.cpp  zepto_action_outcome_soak.cpp  zepto_data_node.cpp  zepto_edge_fleet_replay.cpp  zepto_flight_server.cpp  zepto_http_server.cpp  zepto_ingest_node.cpp
web/: next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
zepto_py/: __init__.py  arrow.py  connection.py  dataframe.py  streaming.py  utils.py
(+1346 files in other folders)
