[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "zeptodb"
dynamic = ["version"]
description = "Python client and DataFrame integration for ZeptoDB — ultra-low latency columnar time-series database"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [{ name = "ZeptoDB Contributors" }]
keywords = ["database", "timeseries", "columnar", "HFT", "finance", "analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering",
]

# Core runtime — pure stdlib, zero mandatory dependencies
dependencies = []

[project.optional-dependencies]
pandas = [
    "numpy>=1.24",
    "pandas>=2.0",
]
polars = [
    "polars>=0.20",
]
arrow = [
    "pyarrow>=14.0",
]
duckdb = [
    "duckdb>=0.9",
]
all = [
    "numpy>=1.24",
    "pandas>=2.0",
    "polars>=0.20",
    "pyarrow>=14.0",
    "duckdb>=0.9",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "numpy>=1.24",
    "pandas>=2.0",
    "polars>=0.20",
    "pyarrow>=14.0",
    "duckdb>=0.9",
]

[project.urls]
Homepage      = "https://zeptodb.io"
Repository    = "https://github.com/ZeptoDB/ZeptoDB"
Documentation = "https://docs.zeptodb.io"

# ============================================================================
# hatch build
# ============================================================================

[tool.hatch.version]
path = "zepto_py/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/zepto_py/",
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["zepto_py"]

# ============================================================================
# pytest
# ============================================================================

[tool.pytest.ini_options]
testpaths   = ["tests/python"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# ============================================================================
# coverage
# ============================================================================

[tool.coverage.run]
source  = ["zepto_py"]
omit    = ["tests/*", "*/site-packages/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
